--- a/requirements-cpu.txt
+++ b/requirements-cpu.txt
@@ -21,8 +21,10 @@ numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
 propcache==0.3.1
+psycopg2==2.9.9
 pyarrow==19.0.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
@@ -35,4 +37,4 @@ tzdata==2025.2
 urllib3==2.4.0
 xxhash==3.5.0
 yarl==1.19.0
-wandb=0.19.9
+wandb==0.19.9
